[metadata]
name = randomizer-JohanDev
version = 0.1
author = JohanDev
author_email = johandev07@gmail.com
description = A randomizer for your python project
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/JohanDevv/RandomizerLib
project_urls =
    Bug Tracker = https://github.com/JohanDevv/RandomizerLib/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

